@@ -1,7 +1,6 @@
 // Copyright 2018 Yahoo Holdings. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
 package com.yahoo.vespa.hosted.controller.deployment;
 
-import org.apache.commons.io.IOUtils;
 import org.junit.Test;
 
 import java.io.ByteArrayInputStream;
@@ -53,7 +52,7 @@ public class ZipBuilderTest {
         try (ZipInputStream zin = new ZipInputStream(new ByteArrayInputStream(zippedContent))) {
             for (ZipEntry entry = zin.getNextEntry(); entry != null; entry = zin.getNextEntry()) {
                 if (entry.isDirectory()) continue;
-                contents.put(entry.getName(), IOUtils.toString(zin, StandardCharsets.UTF_8));
+                contents.put(entry.getName(), new String(zin.readAllBytes(), StandardCharsets.UTF_8));
             }
         } catch (IOException e) {
             throw new UncheckedIOException("Failed to read zipped content", e);
